--- a/Samples/basic/ogre3d/Ogre3D.vcproj
+++ b/Samples/basic/ogre3d/Ogre3D.vcproj
@@ -39,7 +39,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\include;&quot;$(OGRE_HOME)\include&quot;;&quot;$(OGRE_HOME)\samples\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\include;&quot;$(OGRE_HOME)\include&quot;;&quot;$(OGRE_HOME)\boost_1_44&quot;;&quot;$(OGRE_HOME)\samples\include&quot;"
 				PreprocessorDefinitions="WIN32;_WINDOWS"
 				RuntimeLibrary="3"
 				WarningLevel="3"
@@ -58,7 +58,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="RocketCore_d.lib RocketControls_d.lib RocketDebugger_d.lib OgreMain_d.lib OIS_d.lib"
 				OutputFile="..\..\..\bin\$(ProjectName)_d.exe"
-				AdditionalLibraryDirectories="..\..\..\bin;&quot;$(OGRE_HOME)\lib&quot;"
+				AdditionalLibraryDirectories="..\..\..\bin;&quot;$(OGRE_HOME)\lib\debug&quot;;&quot;$(OGRE_HOME)\boost_1_44\lib&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
@@ -109,7 +109,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\..\include;&quot;$(OGRE_HOME)\include&quot;;&quot;$(OGRE_HOME)\samples\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\include;&quot;$(OGRE_HOME)\include&quot;;&quot;$(OGRE_HOME)\boost_1_44&quot;;&quot;$(OGRE_HOME)\samples\include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				RuntimeLibrary="2"
 				WarningLevel="3"
@@ -127,7 +127,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="RocketCore.lib RocketControls.lib RocketDebugger.lib OgreMain.lib OIS.lib"
 				OutputFile="..\..\..\bin\$(ProjectName).exe"
-				AdditionalLibraryDirectories="..\..\..\bin;&quot;$(OGRE_HOME)\lib&quot;"
+				AdditionalLibraryDirectories="..\..\..\bin;&quot;$(OGRE_HOME)\lib\release&quot;;&quot;$(OGRE_HOME)\boost_1_44\lib&quot;"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
