Implemented the RegisterTag function.
To do that, I had to create a LuaElementInstancer, a Lua interface for that type, and a function for Element.new(string tag).

I restored some files that were accidentally deleted.

--- a/Samples/invaders/RocketInvaders.vcproj
+++ b/Samples/invaders/RocketInvaders.vcproj
@@ -110,7 +110,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\shell\include;..\..\Include"
-				PreprocessorDefinitions="WIN32"
+				PreprocessorDefinitions="WIN32,NDEBUG"
 				RuntimeLibrary="2"
 				WarningLevel="4"
 				DebugInformationFormat="3"
