add luainvaders to CMakeLists.txt
It compiles in g++ and clang, but make install does not install in a way that makes it able to be run, so I had to run it from the build directory.

There are some funky things going on with msvc and cmake, but there are some pre-built .sln files in the repo for everything, so it shouldn't be a problem until I learn how CMake works.

--- a/Samples/luainvaders/LuaRocketInvaders.vcproj
+++ b/Samples/luainvaders/LuaRocketInvaders.vcproj
@@ -55,7 +55,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="RocketCore_d.lib RocketDebugger_d.lib RocketControls_d.lib opengl32.lib RocketCoreLua_d.lib RocketControlsLua_d.lib lua51.lib"
+				AdditionalDependencies="RocketCore_d.lib RocketDebugger_d.lib RocketControls_d.lib opengl32.lib RocketcoreLua_d.lib RocketcontrolsLua_d.lib lua51.lib"
 				OutputFile="..\..\bin\$(ProjectName)_d.exe"
 				AdditionalLibraryDirectories="..\..\bin;..\..\..\support\lib"
 				GenerateDebugInformation="true"
@@ -125,7 +125,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="RocketCore.lib RocketDebugger.lib RocketControls.lib opengl32.lib RocketCoreLua.lib RocketControlsLua.lib lua51.lib"
+				AdditionalDependencies="RocketCore.lib RocketDebugger.lib RocketControls.lib opengl32.lib RocketcoreLua.lib RocketcontrolsLua.lib lua51.lib"
 				OutputFile="..\..\bin\$(ProjectName).exe"
 				AdditionalLibraryDirectories="..\..\bin;..\..\..\support\lib"
 				GenerateDebugInformation="true"
