Removing additional references to EMP
Missed some references to EMP from build mechanisms that I hadn't been
using (relied only on the CMake-based build for the tutorials).

I removed the references to EMPCore in these build files (which,
fortunately, already check for RocketCore as a replacement) and also
updated a couple of references to EMP_PLATFORM_WIN32 in the tutorials'
macros.

--- a/Samples/tutorial/datagrid/Datagrid.vcproj
+++ b/Samples/tutorial/datagrid/Datagrid.vcproj
@@ -55,7 +55,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="EMPCore_d.lib RocketCore_d.lib RocketControls_d.lib RocketDebugger_d.lib libpng_d.lib zlib_d.lib opengl32.lib"
+				AdditionalDependencies="RocketCore_d.lib RocketControls_d.lib RocketDebugger_d.lib libpng_d.lib zlib_d.lib opengl32.lib"
 				OutputFile="..\..\..\..\..\packages\bin\$(ProjectName)_d.exe"
 				AdditionalLibraryDirectories="..\..\shell\libpng;..\..\..\..\..\packages\bin"
 				GenerateDebugInformation="true"
@@ -124,7 +124,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="EMPCore.lib RocketCore.lib RocketControls.lib RocketDebugger.lib libpng.lib zlib.lib opengl32.lib"
+				AdditionalDependencies="RocketCore.lib RocketControls.lib RocketDebugger.lib libpng.lib zlib.lib opengl32.lib"
 				OutputFile="..\..\..\..\..\packages\bin\$(ProjectName).exe"
 				AdditionalLibraryDirectories="..\..\shell\libpng;..\..\..\..\..\packages\bin"
 				SubSystem="2"
