--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ matrix:
   include:
     - os: osx
       osx_image: xcode8.3
-      env: ARCH=OSX
+      env: ARCH=OSX CC=clang
       language: c++
       compiler: clang
     - os: linux
@@ -52,7 +52,7 @@ install:
   - if [[ "$CC" == "clang" ]]; then export CC=clang-6.0 CXX=clang++-6.0; fi
   - if [[ "$CC" == "gcc" ]]; then export CC=gcc-7 CXX=g++-7; fi
   - cd "$TRAVIS_BUILD_DIR/Build"
-  - if [[ "$ARCH" == "x86_64" ]]; then cmake -D BUILD_PYTHON_BINDINGS=ON -DBUILD_LUA_BINDINGS=ON -DBUILD_SAMPLES=ON .; fi
+  - if [[ "$ARCH" == "x86_64" ]]; then cmake -DBUILD_LUA_BINDINGS=ON -DBUILD_SAMPLES=ON .; fi
   - if [[ "$ARCH" == "OSX" ]]; then cmake -G Xcode .; fi
   - cd "$TRAVIS_BUILD_DIR"
 
