--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,15 +14,15 @@ install:
 - cmd: >-
     cd Dependencies
 
-    appveyor DownloadFile https://github.com/ubawurinna/freetype-windows-binaries/releases/download/v2.10.0/freetype-%FREETYPE_VER%.zip
+    appveyor DownloadFile https://github.com/ubawurinna/freetype-windows-binaries/releases/download/v%FREETYPE_VER%/freetype-%FREETYPE_VER%.zip
 
     unzip -o freetype-%FREETYPE_VER%.zip
 
     mv win64 lib
 
-    cd ../Build
+    cd ..
 
-    cmake -G "%VS_GENERATOR%" -DBUILD_SHARED_LIBS=%BUILD_SHARED_LIBS% -DBUILD_SAMPLES=%BUILD_SAMPLES% -DSKIP_DIRECTX_SAMPLES=ON .
+    cmake -G "%VS_GENERATOR%" -DBUILD_SHARED_LIBS=%BUILD_SHARED_LIBS% -DBUILD_SAMPLES=%BUILD_SAMPLES% .
 build:
   parallel: true
   verbosity: minimal
