--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,16 @@
+# Primary cmake build target
+/Build/
+
 # Ignore MacOSX directory info
 .DS_Store
+
 # VS user project files
+.vs/
 *.suo
 *.user
 *.opensdf
-bin/*
-bin64/*
 *.dir/
 Win32/
+x64/
 
-/lib/
-RmlCore.dir/
-RmlControls.dir/
-RmlDebugger.dir/
-
-Win32/
+/Distribution/
