--- a/Cmake/RmlUiConfig.cmake.build.in
+++ b/Cmake/RmlUiConfig.cmake.build.in
@@ -1,10 +1,10 @@
 @PACKAGE_INIT@
 
 set_and_check(RmlUi_INCLUDE_DIRS "@PACKAGE_INCLUDE_DIR@")
-set(RmlUi_LIBRARIES @RML_EXPORTED_TARGETS@)
-list(GET RmlUi_LIBRARIES 0 RML_FIRST_TARGET)
+set(RmlUi_LIBRARIES @RMLUI_EXPORTED_TARGETS@)
+list(GET RmlUi_LIBRARIES 0 RMLUI_FIRST_TARGET)
 
-if(NOT (TARGET ${RML_FIRST_TARGET}))
+if(NOT (TARGET ${RMLUI_FIRST_TARGET}))
   include("${CMAKE_CURRENT_LIST_DIR}/RmlUiTargets.cmake")
 endif()
 
