--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -64,8 +64,13 @@ after_build:
     
     7z a RmlUi-%PLATFORM_NAME%.zip Bin/ Include/ Readme.txt LICENSE Dependencies/freetype-%FREETYPE_VER%/ Samples/
     
+    mkdir Samples/Dependencies/freetype-%FREETYPE_VER%
+    cp Dependencies/freetype-%FREETYPE_VER%/*.TXT Samples/Dependencies/freetype-%FREETYPE_VER%
+    IF "%PLATFORM_NAME%"=="win64" 7z a RmlUi-%PLATFORM_NAME%-samples-only.zip LICENSE .\Samples\* -r -xr!src\ -x!luainvaders\
+    
 artifacts:
 - path: RmlUi-win64.zip
+- path: RmlUi-win64-samples-only.zip
 - path: RmlUi-win32.zip
 deploy:
   release: RmlUi $(APPVEYOR_REPO_TAG_NAME)
